--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Pet Tracker</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="icon" type="image/png" href="icon.png" />
     <script src="https://www.gstatic.com/firebasejs/3.6.8/firebase.js"></script>
     <script>
       firebase.initializeApp({
@@ -10,7 +12,6 @@
     </script>
     <script src="script.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcA7nZ3ZEV1NNaeBhQ8o8XNFlmhx09lAk&libraries=visualization&callback=initMap" async defer></script>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
     <div id="map"></div>
